# uci-3097-cax-142-capstone-942

./: .env.example  README.md  pyproject.toml  requirements.txt
data/sample_output/: .gitkeep
data/sample_processes/: README.md  offboarding.txt  onboarding.txt  password_reset.txt  patch_management.txt  server_provisioning.txt  software_release.txt  ticket_triage.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  SETUP.md  USAGE.md
notebooks/: demo.ipynb
src/: __init__.py  config.py  llm_provider.py  main.py
src/core/: __init__.py  exporter.py  optimizer.py  process_analyzer.py  prompt_templates.py
src/database/: __init__.py  process_repository.py  vector_store.py
src/ui/: __init__.py  cli.py  streamlit_app.py
src/utils/: logger.py  validators.py
tests/: test_analyzer.py  test_exporter.py  test_integration.py  test_optimizer.py
