[project]
name = "business-process-optimization"
version = "0.1.0"
description = "Generative AI app that analyzes and optimizes IT business processes using open-source LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.33",
    "ollama>=0.3.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Vector search / RAG (optional enhancement)
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
# Hugging Face backend (alternative to Ollama)
huggingface = [
    "transformers>=4.40",
    "torch>=2.2",
]
# Development / testing
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
